Implements getProducts with Pageable
